--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <input id="message" placeholder="Enter messages  here" class="msg">
     
  <button type="submit" class="btn" ><i class='bx bxs-send bx-flip-vertical' ></i></button>
+        </form>
 </div>
     </div>
     
@@ -43,7 +44,7 @@
 var name = prompt('Enter userName');
 var userColor = getUsernameColor(name);
 // Connect to the WebSocket server
-var socket = new WebSocket('ws://mj497.github.io/chatap.github.io/');
+//var socket = new WebSocket('localhost:8080');
 function sendMessage(){
     var message = document.getElementById('message').value;
 
@@ -51,8 +52,8 @@ function sendMessage(){
     message:message,
     color:userColor
 };
-socket.send(JSON.stringify(chat));
-    document.getElementById('message').value = '';
+//socket.send(JSON.stringify(chat));
+   // document.getElementById('message').value = '';
  // Get existing chats from localStorage or initialize an empty array
  var chats = JSON.parse(localStorage.getItem('chats')) || [];
 
@@ -89,14 +90,7 @@ function displayChats() {
         // Initial display of chats
         displayChats();
 
-// functio(snapshot){
-// var html = "";
-// html += "<li>";
-// html += snapshot.val().sender + ": " + snapshot.val().message;
-//     html += "</li>";
 
-//     document.getElementById('chats').innerHTML += html;
-// });
 
 </script>
 
